fix misaligned toggle icon

--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,12 @@ body {
 }
 
 .toggleMode{
+  font-size: 1.4em;
   position: absolute;
   right: 1rem;
   top: 1rem;
-  width: 2em;
-  height: 2em;
+  width: 1.5em;
+  height: 1.5em;
   display: flex;
   justify-content: center;
   align-items: center;
